Tightened the resume section

--- a/index.html
+++ b/index.html
@@ -378,31 +378,6 @@
                         </p>
                     </div>
                 </div> <!-- end resume-block -->
-
-                <div class="resume-block">
-                    <div class="resume-block__logo" aria-hidden="true">
-                        <img src="assets/images/icons/Stanford_Cardinal_logo.svg" alt="Stanford Logo" loading="lazy" width="256" height="256">
-                    </div>
-
-                    <div class="resume-block__body">
-                        <div class="resume-block__header">
-                            <h4 class="h3">Dropbox</h4>
-                            <p class="resume-block__header-meta">
-                                <span>Product Designer</span> 
-                                <span class="resume-block__header-date">
-                                    August 2019 - Present
-                                </span>
-                            </p>
-                        </div>
-
-                        <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
-                        </p>
-                    </div>
-                </div> <!-- end resume-block -->
             </div>
         </div> <!-- s-resume__section Work Experience -->
 
@@ -454,7 +429,7 @@
                         </div>
 
                         <p>
-                        Same as above, got this degree for Green Card purposes :)))))
+                        Same as above
                         </p>
                     </div>
                 </div> <!-- end resume-block -->
@@ -499,13 +474,13 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Consuelo Mendoza Hernandez (January 2025 - March 2025; Undergrad), Becoming a Latino Scientist Seminar Course (UC Davis/Genentech)</li>
                 <li>Sevahn Vorperian (October 2024 - Present; Postdoc), Postdoc Peer Mentoring Program at Genentech</li>
                 <li>Andrew Hong (September 2023 - Present; MD/PhD), Korean American Society in Biotech and Pharmaceuticals (KASBP) Mentorship Program</li>
                 <li>Ricardo Mack (October 2019 - June 2020; PhD), Stanford Biosciences Student Association (SBSA) First-Year Mentorship Program</li>
                 <li>Arthur Mensah (September 2015 - June 2016), Agape Christian Fellowship at Dartmouth College</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Biology Resident Expert</b>, Academic Skills Center at Dartmouth College</span> 
@@ -514,12 +489,12 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Served as the Resident Expert in Biology for West House residents.</li>
                 <li>Worked under Academic Skill Center to provide academic help to students.</li>
                 <li>Held weekly office hours where students could drop by to ask questions.</li>
                 <li>Maintained attendance records of students who utilized office hours.</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Tutor</b>, Academic Skills Center at Dartmouth College</span> 
@@ -528,12 +503,12 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Served as a study group leader for cell biology (BIOL 12).</li>
                 <li>Worked closely with professors to solidify students' understanding of cell biology.</li>
                 <li>Prepared PowerPoint slides every week with thought-provoking practice questions about the lecture material.</li>
                 <li>Facilitated exam review sessions.</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Study Group Leader</b>, Academic Skills Center at Dartmouth College</span> 
@@ -542,9 +517,9 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Tutored students in Calculus (MATH 3, during fall of 2014), Cell Structure and Function (BIOL 12, during fall of 2016), Honors Organic Chemistry (CHEM 57, during winter of 2017), Molecular Biology (BIOL 45, summer of 2017), and General Chemistry (CHEM 5, during winter of 2018).</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Teaching Assistant</b>, ALTO Education</span> 
@@ -553,11 +528,11 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Taught English grammar and idioms to high school students.</li> 
                 <li>Administered and scored quizzes and SAT mock tests.</li>
                 <li>Graded essays and homework assignments, maintained score and attendance data using Excel and Google Spreadsheets.</li>
-                </p>
+                </ul>
             </div>
         </div> <!-- s-resume__section Teaching Experience -->
 
@@ -574,10 +549,10 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Reviewed 2 manuscripts for <i>PLOS ONE</i>.</li>
                 <li>Reviewed 1 manuscript for <i>Pharmacology & Therapeutics</i>.</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>President</b>, Korean Bible Study and Koinonia (KBSK), Stanford University</span> 
@@ -586,11 +561,11 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>During tenure as President (June 2021 - June 2023), ensured compliance with Stanford Associated Religions (SAR) / 
                 Office for Religious & Spiritual Life (ORSL) regulations by amending the constitution, 
                 registering the organization/events on CardinalEngage, and attending required governance meetings (1:1s and quarterly check-ins).</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Member</b>, Stanford Science PenPals</span> 
@@ -599,10 +574,10 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Served as a penpal, connecting with middle- and high-schoolers across the U.S. (e.g. Oakland, Texas) and Spain (Sant Pau).</li>
                 <li>Sent 19 letters to 10 students, which included 2 back-and-forth correspondences to each penpal.</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Secretary/Risk Manager</b>, Zeta Psi Fraternity, Psi Epsilon Chapter at Dartmouth College</span> 
@@ -611,12 +586,12 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>As Secretary (June - September 2016), attended executive meetings and sent out meeting minutes.</li>
                 <li>As Risk Manager (June - September 2016 and March 2017 - June 2018), worked with Office of Greek Letter Organizations and Societies (GLOS) (now Office of Greek Life and Student Societies - GLASS)
                 to author the first, chapter-wide Risk Management Policy.</li>
                 <li>Also as Risk Manager, organized door duty and conducted walkthroughs to ensure event safety; received certification for eTIPS On Premise 3.0.</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Musical Director</b>, X.ado at Dartmouth College</span> 
@@ -625,12 +600,12 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Led rehearsals/auditions/performances and directed musical efforts as the Musical Pitch (March 2017 - June 2018).</li>
                 <li>Organized the first international tour (to South Korea), coordinating both logistics as well as securing performance venues.</li>
                 <li>Unified folder structure and file ownership to the official account on Google Drive.</li>
                 <li>(Co-)created four new arrangements.</li>
-                </p>
+                </ul>
                 <div class="resume-block__header">
                     <p class="resume-block__header-meta-no-logo">
                         <span><b>Explorer</b>, Cascade Fire Department</span> 
@@ -639,13 +614,13 @@
                         </span>
                     </p>
                 </div>
-                <p>
+                <ul>
                 <li>Responded to medical emergencies, PI accidents, house fires, vehicle fires and rollovers, carbon monoxide alarms, fire alarms, 
                 wires down, airport alerts and emergencies, and illegal burn reports.</li>
                 <li>Logged 348 hours in service.</li>
                 <li>Participated in community events for fire safety awareness and training.</li>
                 <li>Attended training sessions and kept certifications up to date, earning AHA First Aid CPR/AED license.</li>
-                </p>
+                </ul>
             </div>
         </div> <!-- s-resume__section Leadership and Volunteer Experience -->
 
