Paid my dues to Erwin

--- a/index.html
+++ b/index.html
@@ -797,8 +797,7 @@
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>© Copyright Ceevee 2021</span> 
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                <span>© Copyright Myung Chang Lee (Noah Lee) 2025</span> 
             </div>
         </div>
 
