Updated modals but need to work on sizing still, not sure if CSS is matching HTML tags

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <img loading="lazy" src="assets/images/portfolio/Nabet et al. Cancer Cell 2024 Graphical Abstract.jpg"
                 srcset="assets/images/portfolio/Nabet et al. Cancer Cell 2024 Graphical Abstract@2x.jpg 2x"
                 alt="Example graphical abstract for an article featuring Phase III clinical trial data analysis." />
-                <span class="figure-cta">View figure & details</span>
+                <span class="figure-cta">Representative article</span>
             </a>
             <div class="portfolio-info">
                 <h4 class="portfolio-title">Finding determinants of immunotherapy benefit via analysis of Phase III clinical trial data</h4>
@@ -237,7 +237,7 @@
                 <img loading="lazy" src="assets/images/portfolio/Lee et al. Cell Reports 2023 Graphical Abstract@2.jpg"
                 srcset="assets/images/portfolio/Lee et al. Cell Reports 2023 Graphical Abstract@2.jpg 1x, assets/images/portfolio/Lee et al. Cell Reports 2023 Graphical Abstract@2.jpg 2x"
                 alt="Graphical abstract for multiplexed in vivo CRISPR screen in mouse models of small cell lung cancer." />
-                <span class="figure-cta">View figure & details</span>
+                <span class="figure-cta">Representative article</span>
             </a>
             <div class="portfolio-info">
                 <h4 class="portfolio-title">Identifying cellular and genetic determinants of small cell lung cancer initiation and progression</h4>
@@ -270,11 +270,11 @@
 
         <!-- CARD 03 -->
         <article class="portfolio-card reveal-on-scroll">
-            <a class="portfolio-figure js-open-modal" href="#modal-01" data-modal="modal-01" aria-label="Open details">
+            <a class="portfolio-figure js-open-modal" href="#modal-03" data-modal="modal-03" aria-label="Open details">
                 <img loading="lazy" src="assets/images/portfolio/Almiron Bonnin et al JNS 2019 Figure.jpg"
                 srcset="assets/images/portfolio/Almiron Bonnin et al JNS 2019 Figure.jpg 2x"
                 alt="Example figure from bioinformatics analysis of fluorescent and non-fluorescent glioblastoma tumors." />
-                <span class="figure-cta">View figure & details</span>
+                <span class="figure-cta">Representative article</span>
             </a>
             <div class="portfolio-info">
                 <h4 class="portfolio-title">Improving glioblastoma treatment options by identifying mediators of tumor fluorescence response and glioma self-renewal</h4>
@@ -304,43 +304,43 @@
         =========================================================== -->
         <div id="modal-01" hidden>
             <div class="modal-popup">
-                <img src="assets/images/portfolio/gallery/g-droplet.jpg" alt="Larger view: Microfluidic droplet assay figure" />
+                <img src="assets/images/portfolio/Nabet et al. Cancer Cell 2024 Graphical Abstract@2x.jpg" alt="Larger view: Example graphical abstract for an article featuring Phase III clinical trial data analysis." />
                 <div class="modal-popup__desc">
-                    <h5>Droplet</h5>
-                    <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                    <h5>Immune heterogeneity in small-cell lung cancer and vulnerability to immune checkpoint blockade</h5>
+                    <p>We conduct transcriptomic analyses and non-negative matrix factorization on 271 pre-treatment patient tumor samples from IMpower133 and identify four subsets. The NE tumors with low tumor-associated macrophage (TAM) but high T-effector signals demonstrate longer overall survival with PD-L1 blockade and CE versus CE alone than non-NE tumors with high TAM and high T-effector signal. Our study offers a clinically relevant approach to discriminate SCLC patients likely benefitting most from immunotherapies and highlights the complex mechanisms underlying immunotherapy responses.</p>
                     <ul class="modal-popup__cat">
-                        <li>Branding</li><li>Product Design</li>
+                        <li>SCLC</li><li>Phase III biomarker study</li><li>Immunotherapy</li>
                     </ul>
                 </div>
-                <a href="https://www.behance.net/" class="modal-popup__details" target="_blank" rel="noopener">Project link</a>
+                <a href="https://www.sciencedirect.com/science/article/pii/S1535610824000151" class="modal-popup__details" target="_blank" rel="noopener">Article link</a>
             </div>
         </div> <!-- end modal -->
 
         <div id="modal-02" hidden>
             <div class="modal-popup">
-                <img src="assets/images/portfolio/gallery/g-droplet.jpg" alt="Larger view: Microfluidic droplet assay figure" />
+                <img src="assets/images/portfolio/Lee et al. Cell Reports 2023 Graphical Abstract@2.jpg" alt="Larger view: Graphical abstract for multiplexed in vivo CRISPR screen in mouse models of small cell lung cancer." />
                 <div class="modal-popup__desc">
-                    <h5>Droplet</h5>
-                    <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                    <h5>A multiplexed in vivo approach to identify driver genes in small cell lung cancer</h5>
+                    <p>Here, we develop a quantitative multiplexed approach on the basis of lentiviral barcoding with somatic CRISPR-Cas9-mediated genome editing to functionally investigate candidate regulators of tumor initiation and growth in genetically engineered mouse models of SCLC. Candidate drivers of SCLC identified from a meta-analysis across multiple human SCLC genomic datasets were tested using this approach, which defines both positive and detrimental impacts of inactivating 40 genes across candidate pathways on SCLC development. This analysis and subsequent validation in human SCLC cells establish TSC1 in the PI3K-AKT-mTOR pathway as a robust tumor suppressor in SCLC.</p>
                     <ul class="modal-popup__cat">
-                        <li>Branding</li><li>Product Design</li>
+                        <li>SCLC</li><li>CRISPR/Cas9</li><li>Meta-analysis</li><li>Mouse models</li>
                     </ul>
                 </div>
-                <a href="https://www.behance.net/" class="modal-popup__details" target="_blank" rel="noopener">Project link</a>
+                <a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(23)00001-3" class="modal-popup__details" target="_blank" rel="noopener">Article link</a>
             </div>
         </div> <!-- end modal -->
 
         <div id="modal-03" hidden>
             <div class="modal-popup">
-                <img src="assets/images/portfolio/gallery/g-droplet.jpg" alt="Larger view: Microfluidic droplet assay figure" />
+                <img src="assets/images/portfolio/Almiron Bonnin et al JNS 2019 Figure.jpg" alt="Larger view: Example figure from bioinformatics analysis of fluorescent and non-fluorescent glioblastoma tumors." />
                 <div class="modal-popup__desc">
-                    <h5>Droplet</h5>
-                    <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                    <h5>Characterizing the heterogeneity in 5-aminolevulinic acid–induced fluorescence in glioblastoma</h5>
+                    <p>The authors found that the gene expression patterns characterizing fluorescent and nonfluorescent GBM surgical specimens were profoundly different and were associated with distinct cellular functions and different biological pathways. Nonfluorescent tumor tissue tended to resemble the neural subtype of GBM; meanwhile, fluorescent tumor tissue did not exhibit a prominent pattern corresponding to known subtypes of GBM. Consistent with this observation, neural GBM samples from The Cancer Genome Atlas database exhibited a significantly lower fluorescence score than nonneural GBM samples as determined by a fluorescence gene signature developed by the authors.</p>
                     <ul class="modal-popup__cat">
-                        <li>Branding</li><li>Product Design</li>
+                        <li>Bioinformatics</li><li>Glioblastoma</li>
                     </ul>
                 </div>
-                <a href="https://www.behance.net/" class="modal-popup__details" target="_blank" rel="noopener">Project link</a>
+                <a href="https://thejns.org/view/journals/j-neurosurg/132/6/article-p1706.xml" class="modal-popup__details" target="_blank" rel="noopener">Article link</a>
             </div>
         </div> <!-- end modal -->
 
